# erc-hackathon-2023

./: .gitignore  README.md
electronics/: PCB ERC - Coil DC to AC v0.brd  PCB ERC - Coil DC to AC v0.f3d  PCB ERC - Control (3-7).brd  PCB ERC - Control (3-7).sch  PCB_ERC_-_Coil_DC_to_AC_v0.sch
misc/: path_planning_run_1.txt  path_planning_run_2.txt  path_planning_run_3.txt  path_planning_run_4.txt
robotics_hackathon_automation/: CMakeLists.txt  package.xml
robotics_hackathon_automation/launch/: automation_task.launch
robotics_hackathon_automation/msg/: PointArray.msg
robotics_hackathon_automation/src/: colour_detection.py  control2.py  controller.py  controller2.py  make_testing_easy.py  obstacle_detection.py  path_plan_2.py  path_planner.py  paths_data_temp.txt  test_control2.py
